Basic Maze Game no2 - The win condition/goal now works.
Now that the game is technically a playable demo I need to spend time polishing it up and making the pause menu.

--- a/Basic Maze Game no2/Basic Maze Game no2.csproj
+++ b/Basic Maze Game no2/Basic Maze Game no2.csproj
@@ -324,6 +324,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\GoalController.cs" />
+    <Compile Include="Assets\Scripts\LevelManager.cs" />
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
